[tool.poetry]
name = "btplotting"
version = "0.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
backtrader = {path = "../../libs/backtrader", develop = true}
matplotlib = "^3.7.2"
pandas = "^2.0.3"
jinja2 = "^3.1.2"
bokeh = "2.4.3"
selenium = "^4.4.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pydocstyle = "^6.3.0"
bandit = "^1.7.5"
pylint = "^2.17.4"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"